# wide-awake

./: LICENSE  README.md  pyproject.toml
.scripts/: setup.py
src/wide_awake/: awake.py
