[project]
name = "wide-awake"
version = "0.1.0"
description = "macOS Menu Bar Sleep Toggle"
readme = "README.md"
authors = [
    { name = "boonhapus", email = "me@boonhap.us" }
]
requires-python = ">=3.14"
dependencies = [
    "rumps",
]

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"